--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test" : "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.3",
+    "babel-jest": "^29.0.3",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
